--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.7",
+    "@auth/mongodb-adapter": "^3.5.3",
+    "@next-auth/mongodb-adapter": "^1.1.3",
     "@popperjs/core": "^2.11.8",
-    "@prisma/client": "^5.20.0",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
+    "mongodb": "^5.9.2",
+    "mongoose": "^8.7.0",
     "next": "14.2.13",
     "next-auth": "^4.24.8",
     "pg": "^8.13.0",
@@ -22,6 +24,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/next-auth": "^3.15.0",
     "@types/node": "^20",
     "@types/pg": "^8.11.10",
     "@types/react": "^18",
