--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next-auth": "^4.24.8",
     "pg": "^8.13.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
